# automated-research-report-generation-v2

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  users.db
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
src/research_and_analyst/api/: main.py
src/research_and_analyst/api/models/: request_models.py
src/research_and_analyst/api/routes/: report_routes.py
src/research_and_analyst/api/services/: report_service.py
src/research_and_analyst/api/templates/: dashboard.html  login.html  report_progress.html  signup.html
src/research_and_analyst/config/: configuration.yaml
src/research_and_analyst/database/: db_config.py
src/research_and_analyst/notebook/: evaluation.ipynb  test.ipynb
src/research_and_analyst/prompt_lib/: prompt_locator.py
src/research_and_analyst/utils/: config_loader.py  model_loader.py
src/research_and_analyst/workflows/: interview_workflow.py  report_generator_workflow.py
static/css/: styles.css
